# funlab-auth

./: .gitignore  README.md  pyproject.toml
funlab/auth/: __init__.py  forms.py  user.py  utils.py  view.py
funlab/auth/conf/: plugin.toml
funlab/auth/templates/: logo.html  logout.html  register.html  resetpass.html  settings.html  sign-in-cover.html  sign-in-illustration.html  sign-in.html
