[tool.poetry]
name = "funlab-auth"
version = "0.2.7"
license = "MIT"
description = "A funlab-flaskr plugin provide authentication mechenism."
authors = ["SunnyLin <013.lin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sunnylin13/funlab-auth"
# documentation = "https://python-poetry.org/docs/"
packages = [{include = "funlab"}]

[tool.poetry.dependencies]
python = "^3.11"
authlib = "^1.3.0"
requests = "^2.31.0"
bcrypt = "^4.1.2"
flask-wtf = "^1.2.1"
funlab-flaskr = {path = "../funlab-flaskr", develop = true}  #

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."funlab_plugin"]
AuthView="funlab.auth.view:AuthView"

# AuthView must load at startup: it calls register_routes() (registers the auth
# blueprint), register_login_handler() (installs flask-login's @user_loader), and
# setup_menus() (adds Settings/Logout to the user menu).
# Without this, flask-login redirects every @login_required page to a 404.
[tool.funlab_plugin_metadata.AuthView]
load_mode = "startup"